crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__compile_interpolation.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div>${_ssrInterpolate(_ctx.msg)}</div>`)
}
