crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_component_with_props_and_slot.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("MyCard"), _mergeProps({ title: _ctx.t }, _attrs), {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(`<p>body</p>`)
      } else {
        return [_createElementVNode("p", null, "body")]
      }
    }),
    _: 1
  }, _parent))
}
