crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_dynamic_class_and_style.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_mergeProps({ class: { active: _ctx.isActive }, style: { color: _ctx.color } }, _attrs))}>x</div>`)
}
