crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_fragment_multiple_roots.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[--><header>a</header><main>${_ssrInterpolate(_ctx.b)}</main><!--]-->`)
}
