crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_named_scoped_slot_keeps_props_in_vnode_fallback.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Outer"), _attrs, {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(_ssrRenderComponent(_resolveComponent("Inner"), null, {
          header: _withCtx(({ collapsed }, _push, _parent, _scopeId) => {
            if (_push) {
              _push(`<span>${_ssrInterpolate(collapsed)}</span>`)
            } else {
              return [_createElementVNode("span", null, [_createTextVNode(_toDisplayString(collapsed))])]
            }
          }),
          default: _withCtx(({ collapsed }, _push, _parent, _scopeId) => {
            if (_push) {
              _push(_ssrRenderComponent(_resolveComponent("Leaf"), { collapsed: collapsed }, null, _parent, _scopeId))
            } else {
              return [_createVNode(_resolveComponent("Leaf"), { collapsed: collapsed }, null)]
            }
          }),
          _: 1
        }, _parent, _scopeId))
      } else {
        return [_createVNode(_resolveComponent("Inner"), null, { header: _withCtx(({ collapsed }) => [_createElementVNode("span", null, [_createTextVNode(_toDisplayString(collapsed))])]), default: _withCtx(({ collapsed }) => [_createVNode(_resolveComponent("Leaf"), { collapsed: collapsed }, null)]), _: 1 })]
      }
    }),
    _: 1
  }, _parent))
}
