crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_slot_outlet_fallback_survives_vnode_branch.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Outer"), _attrs, {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(`<button>`)
        _ssrRenderSlot(_ctx.$slots, "default", { ui: _ctx.ui }, () => {
          if (_ctx.label) {
            _push(`<span>${_ssrInterpolate(_ctx.label)}</span>`)
          } else {
            _push(`<!---->`)
          }
        }, _push, _parent, _scopeId)
        _push(`</button>`)
      } else {
        return [_createElementVNode("button", null, [_renderSlot(_ctx.$slots, "default", { ui: _ctx.ui }, () => [(_ctx.label) ? _createElementVNode("span", null, [_createTextVNode(_toDisplayString(_ctx.label))]) : _createCommentVNode("")])])]
      }
    }),
    _: 3 /* FORWARDED */
  }, _parent))
}
